2010-09-27  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/coff.c (_copy_config): config section size off by one.
  * gpasm/directive.c (do_config): Revert a change to PIC16 banksel
  instruction in object file. It broke a test case.
  * gpasm/testsuite/test: Print path to asm file being compiled.

2010-09-25  Marko Kohtala  <marko.kohtala@gmail.com>
  * Fix bugs from 2010-05-20 commit. Coff file reading got symbols
  wrong and relocations had problems. Closes bug #3066883. Bugs
  #3031576 and #3018489 may be duplicates and closed as well. Related
  test cases added.
  * No longer generate RELOCT_ACCESS relocations when access bit was
  explicitly defined in instruction.

2010-06-20  Borut Razem <borutr@users.sourceforge.net>
  * gpasm/gpasm.c, gpasm/gpasm.h:
    fixed bug #3018645: gpasm -o option: file name extension is overwritten

2010-05-20  Marko Kohtala  <marko.kohtala@gmail.com>
  * Major change to byte based section data handling. Device classes
  are now structures with class specific data. Bug 2975796 fix for code_pack.
  Several fixes to code generation in data section. __idlocs fixed to use
  correct addresses. const, signedness and other cleanups.
  * Add gpasm test cases for code_pack, data sections, .def, .dim,
  .direct, etc. Also the gpasm test scripts now execute all tests even in
  case of errors and run object tests in objtest directory to not mess up
  the absolute mode tests.
  * Add more descriptive output to gpvo.

2009-03-29  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/util.c (select_radix): Fix LIST R=? processing to pass
  testsuite/gpasm.mchip list3.asm compilation

2009-03-19  Marko Kohtala  <marko.kohtala@gmail.com>
  * gpasm/Makefile.am, gplink/Makefile.am: Bring back BUILT_SOURCES
  removed by mistake. Now with comments to help remember why it is
  there.

2009-03-18  Marko Kohtala  <marko.kohtala@gmail.com>
  * Fix gpdasm inhx32 reading bug. Thanks to Peter Keller.

2009-03-13  David Barnett  <daviebdawg@gmail.com>